Added one test for JwtAuthenticationFilter